language/move-lang/tests/move_check/typing/constraints_not_satisfied_struct_field.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_struct_field.move:6:12
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
6 │         f: CupC<R>,
  │            ^^^^^^^
  │            │    │
  │            │    The type '0x8675309::M::R' does not have the ability 'copy'
  │            'copy' constraint not satisifed

