language/move-lang/tests/move_check/typing/constraints_not_satisfied_struct_field.move
module 0x8675309::M {
    struct CupC<T: copy> { f: T }
    struct R {}

    struct B {
        f: CupC<R>,
    }
}
